--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "crypto-wallet",
-  "version": "0.1.0",
+  "name": "compact-pay",
+  "author": "www.jonu.dev",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,10 +16,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "sass": "^1.54.8",
+    "swiper": "^8.3.2",
     "typescript": "^4.8.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
