--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,27 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "compact pay",
+  "name": "compact pay",
+  "description": "Pay anywhere crypto is accepted",
+  "author": "www.jonu.dev",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "./favicons/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "./favicons/logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "./favicons/logo348.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "348x348"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#F6F6F6",
+  "background_color": "#F6F6F6"
 }
